--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,25 @@
-python-telegram-bot==20.7
-qrcode[pil]==7.4.2
-monero==0.7.2
-requests==2.31.0
-python-dotenv==1.0.0
+anyio==4.11.0
+certifi==2025.10.5
+cffi==2.0.0
+charset-normalizer==3.4.4
+dotenv==0.9.9
+greenlet==3.2.4
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.11
+ipaddress==1.0.23
+monero==1.1.1
+pycparser==2.23
+pycryptodomex==3.23.0
+PyNaCl==1.6.0
+PySocks==1.7.1
+python-dotenv==1.2.1
+python-telegram-bot==22.5
+qrcode==8.2
+requests==2.32.5
+sniffio==1.3.1
+SQLAlchemy==2.0.44
+typing_extensions==4.15.0
+urllib3==2.5.0
+varint==1.0.2
