--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
+annotated-doc==0.0.3
+annotated-types==0.7.0
 anyio==4.11.0
 certifi==2025.10.5
 cffi==2.0.0
 charset-normalizer==3.4.4
+click==8.3.0
 dotenv==0.9.9
+fastapi==0.121.1
 greenlet==3.2.4
 h11==0.16.0
 httpcore==1.0.9
@@ -12,6 +16,8 @@ ipaddress==1.0.23
 monero==1.1.1
 pycparser==2.23
 pycryptodomex==3.23.0
+pydantic==2.12.4
+pydantic_core==2.41.5
 PyNaCl==1.6.0
 PySocks==1.7.1
 python-dotenv==1.2.1
@@ -20,6 +26,9 @@ qrcode==8.2
 requests==2.32.5
 sniffio==1.3.1
 SQLAlchemy==2.0.44
+starlette==0.49.3
+typing-inspection==0.4.2
 typing_extensions==4.15.0
 urllib3==2.5.0
+uvicorn==0.38.0
 varint==1.0.2
