--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ httpx==0.28.1
 idna==3.11
 ipaddress==1.0.23
 monero==1.1.1
+monerorequest==2.1.0
 pycparser==2.23
 pycryptodomex==3.23.0
 pydantic==2.12.4
