--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 annotated-doc==0.0.3
 annotated-types==0.7.0
 anyio==4.11.0
+APScheduler==3.11.1
 certifi==2025.10.5
 cffi==2.0.0
 charset-normalizer==3.4.4
@@ -30,6 +31,7 @@ SQLAlchemy==2.0.44
 starlette==0.49.3
 typing-inspection==0.4.2
 typing_extensions==4.15.0
+tzlocal==5.3.1
 urllib3==2.5.0
 uvicorn==0.38.0
 varint==1.0.2
